Improving error message for attributes with default value.